--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Loading...</title>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="user-scalable=no, width=device-width, initial-scale=1.0,user-scalable=0, maximum-scale=1.0">
